Write some code to test vue

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <link href="app.css" rel="stylesheet">
   </head>
   <body>
+    <div id="app"></div>
+    <script type="text/template" id="app-template">
+      <div>
+        <p>Count: {{ count }}</p>
+        <button @click="bump">Bump!</button>
+      </div>
+    </script>
     <script src="dist/app.js"></script>
   </body>
 </html>
