--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="text/template" id="app-template">
+    <script type="text/x-template" id="app-template">
       <div>
         <p>Count: {{ count }}</p>
         <button @click="bump">Bump!</button>
